# solana-oracle-function-example

./: .env  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  client_config.ini  package-lock.json  package.json  pnpm-lock.yaml  somekoii.js
client/: Cargo.toml  client_config.ini
client/src/: main.rs
client/src/instructions/: amm_instructions.rs
programs/01_basic_oracle/: Cargo.toml
programs/01_basic_oracle/src/: lib.rs
programs/02_srfx_usdc_oracle/: Cargo.toml
programs/02_srfx_usdc_oracle/src/: lib.rs  models.rs
programs/02_task_runner_oracle/: Cargo.toml
programs/02_task_runner_oracle/src/: lib.rs  models.rs
programs/02_twap_oracle/: Cargo.toml
programs/02_twap_oracle/src/: lib.rs  models.rs
programs/03_task_runner_oracle/: Cargo.toml
programs/03_task_runner_oracle/src/: lib.rs  models.rs
scripts/: init-basic-oracle.ts  init-task-runner-oracle.ts  utils.ts  watch.ts
switchboard-functions/00_bun_oracle_function/: package.json
switchboard-functions/01_basic_oracle_function/: Dockerfile
switchboard-functions/01_basic_oracle_function_bun/: .gitignore  Dockerfile  Dockerfile.external  README.md  bun.lockb  package.json  tsconfig.json
switchboard-functions/01_basic_oracle_function_bun/configs/: boot.sh  bun.manifest.template
switchboard-functions/01_basic_oracle_function_bun/configs-external/: app.manifest.template  boot.app.sh  boot.sh  bun.manifest.template  get_measurement.sh
switchboard-functions/01_basic_oracle_function_bun/src/: index.ts  types.ts
switchboard-functions/01_basic_oracle_function_ts/: package-lock.json  package.json  pnpm-lock.yaml
switchboard-functions/01_basic_oracle_function_ts/src/: binance.ts  idl.json  index.ts
switchboard-functions/02_srfx_usdc_oracle_function_rust/: Cargo.toml  Dockerfile
switchboard-functions/02_srfx_usdc_oracle_function_rust/config/: app.manifest.template
switchboard-functions/02_srfx_usdc_oracle_function_rust/src/: balancer.rs  main.rs  math.rs
switchboard-functions/02_task_runner_function_ts/: package-lock.json  package.json
switchboard-functions/02_task_runner_function_ts/src/: idl.json  index.ts  types.ts
switchboard-functions/02_twap_oracle_function_rust/: Cargo.toml  Dockerfile
switchboard-functions/02_twap_oracle_function_rust/src/: binance.rs  main.rs
switchboard-functions/02_twap_oracle_function_ts/: Dockerfile  package.json
switchboard-functions/02_twap_oracle_function_ts/src/: binance.ts  idl.json  index.ts  types.ts
switchboard-functions/03_task_runner_function_ts/: Dockerfile  package-lock.json  package.json  tsconfig.json
switchboard-functions/03_task_runner_function_ts/configs/: boot.sh  get_measurement.sh  nodejs.manifest.template
switchboard-functions/03_task_runner_function_ts/src/: index.ts
tests/: basic_oracle.ts  task_runner_oracle.ts  utils.ts
(+23 files in other folders)
