[package]
name = "twap-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "twap_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# switchboard-solana = { version = "0.28.29", path = "../../../sbv3/rust/switchboard-solana" }
switchboard-solana = "0.28.29"
anchor-lang = { version = "0.28", features = ["init-if-needed"] }
bytemuck = "1.14"
