[package]
name = "task-runner-oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "task_runner_oracle"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
switchboard-solana = "*"
anchor-lang = { version = "0.28", features = ["init-if-needed"] }
bytemuck = "1.14"
raydium-amm-v3 = { path = "../amm", features = ["cpi"] }
anchor-spl = "0.28"