[workspace]

[package]
name = "basic-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-oracle-function"
path = "src/main.rs"

[dependencies]
srfx-usdc-oracle = { path = "../../programs/02_srfx_usdc_oracle", features = [
    "no-entrypoint",
] }
tokio = "^1"
futures = "*"
chrono = "0.4.28"
serde = "^1"
serde_json = "^1"
switchboard-utils = "0.9.0"
switchboard-solana = { version = "=0.29.71", features = ["macros"] }
reqwest = "0.11.20"
rust_decimal = { version = "1.30.0", features = ["maths"] }
balancer_sdk = { version = "0.1.16-alpha" }
web3 = "0.19.0"
ethers = "*"
primitive-types = "*"