[workspace]

[package]
name = "balancer-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balancer-oracle-function"
path = "src/main.rs"

[dependencies]
tokio = "^1"
serde = "^1"
switchboard-utils = "0.9.0"
switchboard-solana = { version = "0.29.71", features = ["macros"] }
rust_decimal = { version = "1.30.0", features = ["maths"] }
balancer_sdk = { version = "0.1.16-alpha" }
srfx-usdc-oracle = {path = "../../programs/02_srfx_usdc_oracle" }