[workspace]

[package]
name = "basic-oracle-function"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic-oracle-function"
path = "src/main.rs"

[dependencies]
basic-oracle = { path = "../../programs/01_basic_oracle", features = [
    "no-entrypoint",
] }
tokio = "^1"
futures = "0.3"
serde = "^1"
serde_json = "^1"
# switchboard-utils = "0.8.3"
switchboard-solana = { version = "0.28.27" }
reqwest = "0.11.20"
